# shadowdhcp

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clickhouse_schema.sql  config.json  deny.toml  example_relay_message_rust.txt  grafana_dashboard.json  grafana_dashboard_events.json  ids.json  install_clickhouse.sh  option82_formats.md  reservations.json  vector.toml
.github/workflows/: release.yml
docs/: configuration.md  events.md  installation-alpine.md  logging.md  management.md  reservations.md
openrc/: installation.md  shadowdhcp  shadowdhcp.logrotate  vector  vector.conf
src/: batch.rs  clickhouse_http.rs  client.rs  config.rs  extractors.rs  leasedb.rs  lib.rs  logging.rs  main.rs  mgmt.rs  opt82_cache.rs  reservationdb.rs  shutdown.rs  signal.rs  transport.rs  types.rs  v4.rs  v6.rs
src/analytics/: batch.rs  clickhouse.rs  clickhouse_http.rs  events.rs  mod.rs  writer.rs
src/logging/: clickhouse.rs  mod.rs
src/middleware/: analytics.rs
src/service/: dhcp.rs  mod.rs  v6_handlers.rs
src/v4/: extensions.rs  extractors.rs  handlers.rs  mod.rs  reservation.rs  tests.rs  worker.rs
src/v6/: extensions.rs  extractors.rs  handlers.rs  mac_extractors.rs  mod.rs  reservation.rs  tests.rs  worker.rs
