[package]
name = "shadowdhcp"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "shadowdhcp"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "shadowdhcp"
path = "src/main.rs"

[profile.release]
strip = true
panic = "abort"

[profile.release-lto]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
arc-swap = "1.7.1"
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = "6.1.0"
dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
ipnet = { version = "2.5", features = ["serde"] }
pico-args = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std", "json"] }
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
