[package]
name = "shadowdhcp"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "shadowdhcp"

[[bin]]
name = "shadowdhcp"
path = "src/main.rs"

[profile.release]
strip = true
panic = "abort"

[profile.release-lto]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["clickhouse"]
clickhouse = ["dep:ureq", "dep:base64"]

[dependencies]
advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
arc-swap = "1.7.1"
base64 = { version = "0.22", default-features = false, features = ["std"], optional = true }
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = "6.1.0"
dhcproto = { git = "https://github.com/nocduro/dhcproto.git", rev = "ead5c0b0003933f55abc237e502444e2e9c35894" }
ipnet = { version = "2.5", features = ["serde"] }
pico-args = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std", "json", "registry"] }
ureq = { version = "3", default-features = false, features = ["rustls", "platform-verifier", "json"], optional = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4", default-features = false, features = ["iterator"] }
